@@ -974,10 +974,8 @@ argument.
 A columnated list.
 The
 .Fl width
-argument has no effect; instead, each argument specifies the width
-of one column, using either the scaling width syntax described in
-.Xr roff 7
-or the string length of the argument.
+argument has no effect; instead, the string length of each argument
+specifies the width of one column.
 If the first line of the body of a
 .Fl column
 list is not an
